# libaes

./: .clang-format  .clang-tidy  .gitignore  DOC.md  README.md  config.ini  gfmul.c  meson.build  meson.options  test  test.c
.github/workflows/: build.yml  ci.yml  norm.yml  snyk.yml  test.yml
inc/: aes.h  buf.h  gf.h  libft.h  pkcs.h  rand.h
src/: test  test.c
src/cbc/: aes_128_cbc.c  aes_192_cbc.c  aes_256_cbc.c  aes_cbc.c
src/cfb/: aes_cfb.c
src/ctr/: aes_ctr.c
src/ecb/: aes_128.c  aes_128_ecb.c  aes_192_ecb.c  aes_256_ecb.c  aes_ecb.c
src/expansion/: aes_128_expansion.c  aes_128_key_expansion.c  aes_192_expansion.c  aes_256_expansion.c  aes_ni_128_expansion.c  aes_ni_192_expansion.c  aes_ni_256_expansion.c
src/gcm/: aes_gcm.c  gfmul.c
src/gf/: gf128_mul.c  gf8_mul.c
src/ofb/: aes_ofb.c
src/pkcs/: pkcs.c
src/random/: rdrnd.c  urandom.c
src/rc/: rc.c
src/utils/: aes_block.c
tests/: README_TESTS.md
tests/aes_128_ecb/: aes_128_ecb_cat.c  aes_128_ecb_one.c  meson.build
tests/aes_cbc/: aes_128_cbc_one.c  aes_128_cbc_random.c  aes_128_cbc_two.c  aes_192_cbc_one.c  aes_256_cbc_one.c  aes_256_cbc_two.c  aes_cbc_one.c  meson.build
tests/aes_cfb/: aes_128_cfb_one.c  aes_128_cfb_random.c  aes_128_cfb_two.c  aes_192_cfb_one.c  aes_256_cfb_one.c  aes_256_cfb_two.c  aes_cfb_one.c  meson.build
tests/aes_ctr/: aes_128_ctr_128_nonce.c  aes_128_ctr_one.c  aes_128_ctr_random.c  aes_128_ctr_three.c  aes_128_ctr_two.c  aes_192_ctr_one.c  aes_256_ctr_one.c  aes_ctr_one.c  meson.build
tests/aes_ecb/: aes_128_ecb_one.c  aes_128_ecb_two.c  aes_192_ecb_one.c  aes_256_ecb_one.c  aes_256_ecb_two.c  aes_ecb_one.c  meson.build
tests/aes_gcm/: aes_128_gcm_128_nonce.c  aes_128_gcm_test1.c  aes_128_gcm_test2.c  aes_128_gcm_test3_aad.c  aes_128_gcm_test4_multiblock.c  aes_128_gcm_test5_partial_block.c  aes_192_gcm_test.c  aes_256_gcm_test.c  aes_gcm_nist_validation.c  meson.build
tests/aes_ofb/: aes_128_ofb_one.c  aes_128_ofb_random.c  aes_128_ofb_two.c  aes_192_ofb_one.c  aes_256_ofb_one.c  aes_256_ofb_two.c  aes_ofb_one.c  meson.build
tests/basic/: meson.build  test1.c
tests/expansion/: aes_expansion_128.c  aes_expansion_192.c  aes_expansion_256.c  meson.build
tests/manual/: README.md  test_gcm_debug.c  test_gfmul_debug.c  test_gfmul_nist.c  test_gfmul_vectors.c  test_gfmul_zero  test_gfmul_zero.c  test_ghash_detailed.c  test_ghash_step.c  test_hash_subkey.c  test_lengths_encoding.c  test_openssl_debug.c  test_openssl_gcm.c  test_with_96bit_iv.c  validate_gcm.sh
tests/pkcs/: meson.build  pkcs_null.c  pkcs_test1.c  pkcs_test2.c  pkcs_test3.c  pkcs_test4.c  pkcs_test5.c  pkcs_test_five.c  pkcs_test_four.c  pkcs_test_invalid_size.c  pkcs_test_null.c  pkcs_test_one.c  pkcs_test_seven.c  pkcs_test_six.c  pkcs_test_three.c  pkcs_test_two.c  pkcs_test_unpad_invalid_size.c  pkcs_test_unpad_null.c  pkcs_zero_blk_size.c  pkcs_zero_buf_size.c
tests/random/: meson.build  rdrnd_1.c  rdrnd_2.c  urandom_1.c
tests/rc/: meson.build  rc_test1.c
